- fixed bugs - improved UI on both web-app and tizen application - updated documentation - added streaming feature - updated documentation
